-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 13, 14
-
Component/s: client-libs
-
b10
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247344 | 13.0.4 | Sergey Bylokhov | P3 | Resolved | Fixed | b05 |
| JDK-8243107 | 11.0.8-oracle | Sergey Bylokhov | P3 | Resolved | Fixed | b04 |
| JDK-8243965 | 11.0.8 | Sergey Bylokhov | P3 | Resolved | Fixed | b01 |
ACTION: applet -- Failed. Execution failed: Applet thread threw exception: java.lang.RuntimeException: recursive setBounds paint
REASON: User specified action: run applet SetBoundsPaintTest.html
TIME: 1.267 seconds
messages:
command: applet SetBoundsPaintTest.html
reason: User specified action: run applet SetBoundsPaintTest.html
Additional options from @modules: --add-modules java.desktop
elapsed time (seconds): 1.267
STDOUT:
11
STDERR:
java.lang.RuntimeException: recursive setBounds paint
at SetBoundsPaintTest.init(SetBoundsPaintTest.java:26)
at com.sun.javatest.regtest.agent.AppletWrapper$AppletRunnable.run(AppletWrapper.java:154)
at java.base/java.lang.Thread.run(Thread.java:830)
STATUS:Failed.Applet thread threw exception: java.lang.RuntimeException: recursive setBounds paint
REASON: User specified action: run applet SetBoundsPaintTest.html
TIME: 1.267 seconds
messages:
command: applet SetBoundsPaintTest.html
reason: User specified action: run applet SetBoundsPaintTest.html
Additional options from @modules: --add-modules java.desktop
elapsed time (seconds): 1.267
STDOUT:
11
STDERR:
java.lang.RuntimeException: recursive setBounds paint
at SetBoundsPaintTest.init(SetBoundsPaintTest.java:26)
at com.sun.javatest.regtest.agent.AppletWrapper$AppletRunnable.run(AppletWrapper.java:154)
at java.base/java.lang.Thread.run(Thread.java:830)
STATUS:Failed.Applet thread threw exception: java.lang.RuntimeException: recursive setBounds paint
- backported by
-
JDK-8243107 Test SetBoundsPaintTest.html failed on Windows when desktop is scaled
-
- Resolved
-
-
JDK-8243965 Test SetBoundsPaintTest.html failed on Windows when desktop is scaled
-
- Resolved
-
-
JDK-8247344 Test SetBoundsPaintTest.html failed on Windows when desktop is scaled
-
- Resolved
-
- relates to
-
JDK-8239266 [TEST_BUG] Test RemoveAllShrinkTest clicks mouse in the wrong place
-
- Closed
-
- links to