8225126: Test SetBoundsPaintTest.html faild on Windows when desktop is scaled

Reviewed-by: jdv